[package]
name = "teaWebserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
